# Scene_Analysis

scene_separation/: README.md  pyproject.toml
scene_separation/scene_separation/: advanced_cv_separation.py  airmatch_separation.py  airmatch_separation_v2.py
squeezenet+OF/: README.md  lightweight_scene_analyzer.py  pyproject.toml  quick_test.py  single_video_detector_fixed.py
squeezenet+OF/models/: anomaly_detector_beach.pkl  anomaly_detector_chaparral.pkl  anomaly_detector_forest.pkl  anomaly_detector_mountain.pkl  anomaly_scaler.pkl  anomaly_scaler_beach.pkl  anomaly_scaler_chaparral.pkl  anomaly_scaler_forest.pkl  anomaly_scaler_intersection.pkl  anomaly_scaler_mountain.pkl  anomaly_scaler_port.pkl  feature_selector.pkl  gradient_boosting_model.pkl  label_encoder.pkl  logistic_regression_model.pkl  random_forest_model.pkl  scaler.pkl  svm_model.pkl  xgboost_model.pkl
stabalization/: README.md  pyproject.toml  test_stabalization_v1.py  video_stabilization.py
stabalization/stabalization/: compare.py  compare_and_metrics.py  improved_video_enhancement.py  stab_utils.py  stabalization_v1.py  video_enhancement.py  video_stabilizer.py
