[tool.poetry]
name = "squeezent+of"
version = "0.1.0"
description = "Lightweight Scene Analysis using SqueezeNet and Optical Flow"
authors = ["Hira Aziz <hiraaziz1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.8.0"
torch = ">=2.0.0"
torchvision = ">=0.15.0"
xgboost = ">=1.7.0"
scikit-learn = ">=1.3.0"
numpy = ">=1.21.0"
pandas = ">=2.0.0"
tqdm = ">=4.65.0"
joblib = ">=1.2.0"
matplotlib = ">=3.6.0"
seaborn = ">=0.11.0"
Pillow = ">=9.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
